# flodex

./: .dockerignore  .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  README.md  bun.lockb  fly.toml  package.json  tsconfig.base.json  vercel.json
.github/workflows/: deploy.yml
apps/client/: package.json
apps/client/src/: index.ts
apps/coordinator/: Cargo.toml  Dockerfile
apps/coordinator/src/: main.rs
apps/dashboard/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/dashboard/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
apps/dashboard/.next/cache/: .rscinfo  .tsbuildinfo
apps/dashboard/.next/cache/webpack/client-production/: index.pack
apps/dashboard/.next/cache/webpack/edge-server-production/: index.pack
apps/dashboard/.next/cache/webpack/server-production/: index.pack
apps/dashboard/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
apps/dashboard/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
apps/dashboard/.next/server/app/_not-found/: page.js  page.js.nft.json  page_client-reference-manifest.js
apps/dashboard/.next/server/chunks/: 295.js  697.js
apps/dashboard/.next/server/pages/: 500.html  _error.js
apps/dashboard/.next/static/chunks/: 577-4a95bacde55961f5.js  855-9f1002d97acdc929.js  87c73c54-62e3de13c9f08cce.js  framework-f83a0f29cc95d4a3.js  main-app-a5d6f76f96ce8ed1.js  main-b3320fd019d54ba4.js  webpack-759c96387766598a.js
apps/dashboard/.next/static/chunks/app/: layout-ad42bdfd9dda693e.js  page-ca71e5e366a0da19.js
apps/dashboard/.next/static/chunks/app/_not-found/: page-b496789e25927eb9.js
apps/dashboard/.next/static/css/: 70e96c4cbefdfa86.css
apps/dashboard/.next/types/app/: layout.ts  page.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/components/: ChannelPanel.tsx  CostPanel.tsx  Dashboard.tsx  NodeGraph.tsx  OnChainStatus.tsx  Providers.tsx  RequestForm.tsx  SessionDetail.tsx  Timeline.tsx
apps/dashboard/src/hooks/: useChannel.ts  useNodeActivity.ts  useNodes.ts  useOnChainStatus.ts  useTheme.ts
apps/dashboard/src/lib/: abis.ts  chain.ts  eth.ts  events.ts  wagmi.ts
apps/marketing/: .gitignore  .vercelignore  package.json  tailwind.config.ts
apps/marketing/src/app/: globals.css  layout.tsx  page.tsx
apps/marketing/src/components/: FlowGraph.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  OnChain.tsx  Problem.tsx  Reveal.tsx  SavingsCalculator.tsx  Status.tsx  Tiers.tsx  TwoSides.tsx
apps/node/: Cargo.toml
apps/node/src/: chains.rs  identity.rs  main.rs
apps/node/src/eth/: abi.rs  mod.rs  registry.rs  rlp.rs  rpc.rs  tx.rs
apps/proxy/: Cargo.toml
apps/proxy/src/: main.rs
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: JobChannel.sol  JobEscrow.sol  NodeRegistry.sol
contracts/test/: JobChannel.t.sol  JobEscrow.t.sol  NodeRegistry.t.sol
contracts/test/mocks/: MockUSDC.sol
crates/agent/: Cargo.toml
crates/agent/src/: anthropic.rs  lib.rs  provider.rs  tools.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/local_llm/: Cargo.toml
crates/local_llm/src/: lib.rs  model.rs  openai.rs  server.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
scripts/: deploy.sh  dev.sh
tests/e2e/: README.md  channel-flow.ts  limits.ts  package.json  tsconfig.json
