[package]
name = "coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flodex-coordinator"
path = "src/main.rs"

[dependencies]
protocol.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
