[package]
name = "node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flodex-node"
path = "src/main.rs"

[dependencies]
protocol.workspace = true
crypto.workspace = true
agent.workspace = true
execution.workspace = true
local_llm.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
x25519-dalek.workspace = true
base64.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
