[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
anyhow.workspace = true
thiserror.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = "0.10"
hex = "0.4"
# Pin transitive dep: base64ct >=1.7 requires edition-2024 (Rust 1.85+). The
# rest of the workspace targets 1.74. Drop this once we bump.
base64ct = "<1.7"
