[package]
name = "execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
protocol.workspace = true
agent.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
