[package]
name = "local_llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
dirs.workspace = true
futures-util.workspace = true
